compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__no_crash_on_duplicate_definition.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\npub record Wibble {\n  Wobble\n  Wobble\n}\n\npub fn main() {\n  let wibble = Wobble\n  case wibble {\n    Wobble -> Nil\n  }\n}\n"
---
----- SOURCE CODE

pub record Wibble {
  Wobble
  Wobble
}

pub fn main() {
  let wibble = Wobble
  case wibble {
    Wobble -> Nil
  }
}


----- ERROR
error: Duplicate definition
  ┌─ /src/one/two.rakun:3:3
  │
3 │   Wobble
  │   ^^^^^^ First defined here
4 │   Wobble
  │   ^^^^^^ Redefined here

`Wobble` has been defined multiple times.
Names in a Rakun module must be unique so one will need to be renamed.
