compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__pipe_arity_error.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\nfn go(x, y) {\n  x + y\n}\n\nfn main(x) {\n  1\n  |> go\n}\n"
---
----- SOURCE CODE

fn go(x, y) {
  x + y
}

fn main(x) {
  1
  |> go
}


----- ERROR
error: Type mismatch
  ┌─ /src/one/two.rakun:8:6
  │
8 │   |> go
  │      ^^

Expected type:

    fn(Int) -> a

Found type:

    fn(Int, Int) -> Int
