compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__positional_argument_after_one_using_label_shorthand.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 889
expression: "record X { X(a: Int, b: Int, c: Int) }\nfn x() {\n  let b = 1\n  let a = 1\n  X(b:, a:, 1)\n}"
---
----- SOURCE CODE
record X { X(a: Int, b: Int, c: Int) }
fn x() {
  let b = 1
  let a = 1
  X(b:, a:, 1)
}

----- ERROR
error: Unexpected positional argument
  ┌─ /src/one/two.rakun:5:13
  │
5 │   X(b:, a:, 1)
  │             ^

This unlabeled argument has been supplied after a labelled argument.
Once a labelled argument has been supplied all following arguments must
also be labelled.
